Updated to 26.2 and fixed most bugs.